# doxyrest

./: .appveyor.yml  .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.rst  dependencies.cmake  index.html  objects.inv  search.html  searchindex.js  version.cmake  ~.travis.yml
cmake/: CMakeLists.txt  axl_cmake.cmake  doxyrest_config.cmake.in  doxyrest_config_build.cmake.in  doxyrest_config_install.cmake.in  import_doxyrest.cmake  import_luadoxyxml.cmake
doc/: CMakeLists.txt
doc/build-guide/: CMakeLists.txt  conf.py.in
doc/frame/: CMakeLists.txt
doc/index/: CMakeLists.txt  conf.py.in  index.rst
doc/manual/: CMakeLists.txt  conf.py.in  doxyrest-config.lua
package/: CMakeLists.txt
package/cmake/: doxyrest_config.cmake
package/unix/: CMakeLists.txt
package/windows/: CMakeLists.txt
samples/: CMakeLists.txt
samples/alsa/: .buildinfo  CMakeLists.txt  conf.py.in  doxyrest-config.lua  enum__snd_pcm_type.html  enum_snd_config_type_t.html  enum_snd_ctl_elem_iface_t.html  enum_snd_ctl_elem_type_t.html  enum_snd_ctl_event_type_t.html  enum_snd_ctl_ext_access_t.html  enum_snd_ctl_type_t.html  enum_snd_hwdep_iface_t.html  enum_snd_hwdep_type_t.html  enum_snd_input_type_t.html  enum_snd_mixer_elem_type_t.html  enum_snd_mixer_selem_channel_id_t.html  enum_snd_mixer_selem_regopt_abstract.html  enum_snd_output_type_t.html  enum_snd_pcm_access_t.html  enum_snd_pcm_chmap_position.html  enum_snd_pcm_chmap_type.html  enum_snd_pcm_class_t.html  enum_snd_pcm_format_t.html  enum_snd_pcm_hook_type_t.html  enum_snd_pcm_start_t.html  enum_snd_pcm_state_t.html  enum_snd_pcm_stream_t.html  enum_snd_pcm_subclass_t.html  enum_snd_pcm_subformat_t.html  enum_snd_pcm_tstamp_t.html  enum_snd_pcm_tstamp_type_t.html  enum_snd_pcm_xrun_t.html  enum_snd_rawmidi_stream_t.html  enum_snd_rawmidi_type_t.html  enum_snd_seq_client_type_t.html  enum_snd_seq_event_type.html  enum_snd_seq_query_subs_type_t.html  enum_snd_seq_queue_timer_type_t.html  enum_snd_seq_type_t.html  enum_snd_spcm_duplex_type_t.html  (+141 more)
samples/alsa-sphinxdoc/: .buildinfo  enum__snd_pcm_type.html  enum_snd_config_type_t.html  enum_snd_ctl_elem_iface_t.html  enum_snd_ctl_elem_type_t.html  enum_snd_ctl_event_type_t.html  enum_snd_ctl_ext_access_t.html  enum_snd_ctl_type_t.html  enum_snd_hwdep_iface_t.html  enum_snd_hwdep_type_t.html  enum_snd_input_type_t.html  enum_snd_mixer_elem_type_t.html  enum_snd_mixer_selem_channel_id_t.html  enum_snd_mixer_selem_regopt_abstract.html  enum_snd_output_type_t.html  enum_snd_pcm_access_t.html  enum_snd_pcm_chmap_position.html  enum_snd_pcm_chmap_type.html  enum_snd_pcm_class_t.html  enum_snd_pcm_format_t.html  enum_snd_pcm_hook_type_t.html  enum_snd_pcm_start_t.html  enum_snd_pcm_state_t.html  enum_snd_pcm_stream_t.html  enum_snd_pcm_subclass_t.html  enum_snd_pcm_subformat_t.html  enum_snd_pcm_tstamp_t.html  enum_snd_pcm_tstamp_type_t.html  enum_snd_pcm_xrun_t.html  enum_snd_rawmidi_stream_t.html  enum_snd_rawmidi_type_t.html  enum_snd_seq_client_type_t.html  enum_snd_seq_event_type.html  enum_snd_seq_query_subs_type_t.html  enum_snd_seq_queue_timer_type_t.html  enum_snd_seq_type_t.html  enum_snd_spcm_duplex_type_t.html  enum_snd_spcm_latency_t.html  enum_snd_spcm_xrun_type_t.html  enum_snd_timer_class_t.html  (+137 more)
samples/apr/: .buildinfo  CMakeLists.txt  conf.py.in  doxyrest-config.lua  enum_apr_cmdtype_e.html  enum_apr_datatype_e.html  enum_apr_exit_why_e.html  enum_apr_filetype_e.html  enum_apr_interface_e.html  enum_apr_kill_conditions_e.html  enum_apr_lockmech_e.html  enum_apr_pollset_method_e.html  enum_apr_shutdown_how_e.html  enum_apr_wait_how_e.html  genindex.html  global.html  group_APR.html  group_APR_ERROR_map.html  group_APR_Error.html  group_APR_GlobalMutex.html  group_APR_OC.html  group_APR_STATUS_IS.html  group_APR_Strings_Snprintf.html  group_APR_Util_Escaping.html  group_IP_Proto.html  group_PoolCleanup.html  group_PoolDebug.html  group_apr_allocator.html  group_apr_atomic.html  group_apr_ctype.html  group_apr_dir.html  group_apr_dso.html  group_apr_env.html  group_apr_errno.html  group_apr_file_attrs_set_flags.html  group_apr_file_info.html  group_apr_file_io.html  group_apr_file_lock_types.html  group_apr_file_open_flags.html  group_apr_file_permissions.html  (+62 more)
samples/apr-sphinxdoc/: .buildinfo  enum_apr_cmdtype_e.html  enum_apr_datatype_e.html  enum_apr_exit_why_e.html  enum_apr_filetype_e.html  enum_apr_interface_e.html  enum_apr_kill_conditions_e.html  enum_apr_lockmech_e.html  enum_apr_pollset_method_e.html  enum_apr_shutdown_how_e.html  enum_apr_wait_how_e.html  genindex.html  global.html  group_APR.html  group_APR_ERROR_map.html  group_APR_Error.html  group_APR_GlobalMutex.html  group_APR_OC.html  group_APR_STATUS_IS.html  group_APR_Strings_Snprintf.html  group_APR_Util_Escaping.html  group_IP_Proto.html  group_PoolCleanup.html  group_PoolDebug.html  group_apr_allocator.html  group_apr_atomic.html  group_apr_ctype.html  group_apr_dir.html  group_apr_dso.html  group_apr_env.html  group_apr_errno.html  group_apr_file_attrs_set_flags.html  group_apr_file_info.html  group_apr_file_io.html  group_apr_file_lock_types.html  group_apr_file_open_flags.html  group_apr_file_permissions.html  group_apr_file_seek_flags.html  group_apr_file_stat.html  group_apr_file_writev.html  (+59 more)
samples/jancy-api/: CMakeLists.txt  conf.py.in  doxyrest-config.lua  xml.tar.xz
samples/jancy-stdlib/: CMakeLists.txt  conf.py.in  doxyrest-config.lua  jancy_version.cmake  xml.tar.xz
samples/libssh-sphinxdoc/: .buildinfo  class_ssh_Channel.html  class_ssh_Session.html  class_ssh_SshException.html  enum_sftp_longname_field_e.html  enum_ssh_agent_state_e.html  enum_ssh_auth_auto_state_e.html  enum_ssh_auth_e.html  enum_ssh_auth_service_state_e.html  enum_ssh_auth_state_e.html  enum_ssh_bind_options_e.html  enum_ssh_channel_request_state_e.html  (+136 more)
src/: CMakeLists.txt  CmdLine.cpp  CmdLine.h  DoxyXmlEnum.cpp  DoxyXmlEnum.h  DoxyXmlParser.cpp  DoxyXmlParser.h  DoxyXmlType.cpp  DoxyXmlType.h  Generator.cpp  Generator.h  Module.cpp  Module.h  main.cpp  pch.cpp  pch.h  res.rc  version.h.in
(+2142 files in other folders)
