#...............................................................................
#
#  This file is part of the Doxyrest toolkit.
#
#  Doxyrest is distributed under the MIT license.
#  For details see accompanying license.txt file,
#  the public copy of which is also available at:
#  http://tibbo.com/downloads/archive/doxyrest/license.txt
#
#...............................................................................

if (SPHINX_FOUND)
	add_subdirectory (build-guide)
	add_subdirectory (manual)
endif ()

#...............................................................................
