#...............................................................................
#
#  This file is part of the Doxyrest toolkit.
#
#  Doxyrest is distributed under the MIT license.
#  For details see accompanying license.txt file,
#  the public copy of which is also available at:
#  http://tibbo.com/downloads/archive/doxyrest/license.txt
#
#...............................................................................

add_subdirectory (jancy-api)
add_subdirectory (jancy-stdlib)
add_subdirectory (libusb)
add_subdirectory (libssh)
add_subdirectory (alsa)
add_subdirectory (apr)

#...............................................................................
